syntax = "proto3";

package com.zynga.runtime.protobuf;

option java_package = "com.zynga.protobuf";
option java_outer_classname = "EventSource";
option csharp_namespace = "Zynga.Protobuf.EventSource";

enum EventAction 
{
  SET = 0;
  ADD_LIST = 1;
  REMOVE_LIST = 2;
  ADD_MAP = 3;
  REMOVE_MAP = 4;
  CLEAR = 5;
  SNAPSHOT = 6;
}

message EventContent {
    oneof data {
        uint32      u32 = 1;
        int32       i32 = 2;
        fixed64     f64 = 3;
        fixed32     f32 = 4;
        sfixed64    sf64 = 5;
        sfixed32    sf32 = 6;
        double      r64 = 7;
        float       r32 = 8; 
        bool        bool_data = 9;
        string      string_data = 10;
        bytes       byte_data = 11;
    }
}

message EventData {
    repeated int32 fields = 1;
    repeated EventAction actions = 2;
    repeated EventContent data = 3;
}